update: web, ks_tools
